--- a/idea-study-01/build.gradle
+++ b/idea-study-01/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     // compile group: 'commons-io', name: 'commons-io', version: '2.5'
     //compile group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
-    //compile group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
+    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.28'
     //compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.24'
 
 }
