--- a/idea-study-01/resources/META-INF/plugin.xml
+++ b/idea-study-01/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
+    <depends>org.jetbrains.idea.maven</depends>
 
     <idea-version since-build="191.4212.41"/>
 
